# WedgieIntegrator

./: .gitignore  README.md  setup.cfg  setup.py
WedgieIntegrator/: __init__.py  _asyncio.py  asyncio_workaround.py  auth.py  client.py  config.py  custom_exceptions.py  exceptions.py  logging_config.py  response.py  utils.py
examples/: basic_auth_github.py  github.py  no_auth_jsonplaceholder.py
tests/: test_api_client.py  test_auth.py  test_config.py  test_utils.py  tests_no_auth.py
tests/auth/: test_auth.py  test_basic_auth.py  test_no_auth.py  tests_no_auth.py
wedgieintegrator/: __init__.py  api_client.py  auth.py  logging_config.py  utils.py
