[metadata]
name = WedgieIntegrator
version = 0.1.2.3
author = Chad Roberts
author_email = jcbroberts@gmail.com
description = An API client toolkit that is async friendly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deathbywedgie/WedgieIntegrator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    httpx
    pydantic
    tenacity
    structlog
